spacing issues

--- a/war/css/main.css
+++ b/war/css/main.css
@@ -28,12 +28,9 @@ html {
 .blurb {
 	border: .4em solid #0856B3;
 	margin-top: 1em;
-	padding: 0.7em 0.9em 0.2em 0.9em;
+	padding: 1em;
 	-moz-border-radius: 1em;
 	-webkit-border-radius: 1em;
-}
-.blurb p , .blurb h1, .blurb ul, .blurb div {
-	margin-bottom: 0.5em;
 }
 
 #youtubes {
